--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,11 +2,23 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
+            <h1>Rancher Labs Inc. (An open source container company)
+</h1>
+            <h1>Software Developer
+</h1>
+            <span><address>Shenzhen,China</address><time>Dec. 2016 to Mar. 2017 </time></span>
         </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
+        <p>Rancher Flat network project based on SDN (Open source)
+        </p>
+        <p>Container logging workflow based on ELK
+        </p>
+        <p>CI/CD workflow based on Jenkins,mocha and docker
+        </p>
+        <p>Webank private cloud
+        </p>
+        <p>Hainan Airline group public cloud
+        </p>
+
     </article>
     <article>
         <header>
