add education and profile image

--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -1,21 +1,42 @@
 <section class="thirteen columns">
-    <h1>Initiatives</h1>
+    <h1>Professional Experience</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>Rancher Flat network project</h1>
+            <span><address>Rancher Labs,Phoenix,USA</address><time>2016</time></span>
         </header>
         <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
+             based on Container Network Interface, which is a software-defined network. The Flat network implements that containers and its host machines are in the same subnet network.
         </p>
     </article>
     <article>
         <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
+            <h1>Research on Personal Data Analytic and Implement </h1>
+            <span><professor>Supervised by Prof. C.S. John</professor><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
         </header>
         <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+            The project aims to analysis the web blog and post in the social network. The project had implemented the word count, sentiment  analysis,living habit analysis,topic model based on LDA(Latent Dirichlet Allocation) algorithm. 
+        </p>
+        <p>
+            Developing tools and language:Python,MongoDB, Naïve-Bayes, Topic model, web crawler, Django
+        </p>
+    </article>
+        <article>
+        <header>
+            <h1>Amazon Recommendation System</h1>
+            <span><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
+        </header>
+        <p>
+            The project aims to recommand the protaintial purchasing on Amazon online store. The recommandation based on Item-CF(Item-based collaborative filtering) algorithm.
+        </p>
+    </article>
+            <article>
+        <header>
+            <h1>Amazon Recommendation System</h1>
+            <span><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
+        </header>
+        <p>
+            The project aims to recommand the protaintial purchasing  based on Item-CF(Item-based collaborative filtering) algorithm.
         </p>
     </article>
 </section>
