--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -20,37 +20,20 @@
         </p>
 
     </article>
-    <article>
+        <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
+            <h1>Oracle Asia R&D-Shenzhen
+</h1>
+            <h1>Software Developer in Enterprise Manager
+</h1>
+            <span><address>Shenzhen,China</address><time>Jul.2015 to Dec. 2016 </time></span>
         </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
-    </article>
-    <article>
-        <header>
-            <h1>Teaching Assistant</h1>
-            <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
-        </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
-    </article>
-    <article>
-        <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
-    </article>
-    <article>
-        <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
-        </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
+        <p>Responsible for developing provisioning Oracle database and Grid Infrastructure
+        </p>
+        <p>Responsible for developing database management system development
+        </p>
+        <p>Internal toolkit for optimizing the work efficiency 
         </p>
     </article>
+
 </section>
