--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,22 +2,27 @@
     <h1>Education</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>M.Sc. in Computer Science </h1>
+            <span>The Chinese University of Hong Kong</span>
+            <span><address>HONG KONG</address><time>2014 to 2015</time><gpa>GPA:3.325/4 Distinguished scholarship
+            </gpa></span>
+
         </header>
         <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
+            <em>Major Course:Data Mining, Cloud Computing</em>
+            <em>Researches: Personal Data Analytic and Implement</em>
         </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>B.Sc. in Computer Science and Technology</h1>
+            <span>Beijing Normal University,Zhuhai</span>
+            <span><address>Zhuhai,China</address><time>2010 to 2014</time></span><gpa>GPA: 89/100 Top-grade Professional Scholarship
+            </gpa>
         </header>
         <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+        <em>Dissertation: Research on Human Posture Recognition Algorithm and Application        
+        based on Microsoft KINECT</em>
         </p>
     </article>
 </section>
