--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -30,13 +30,14 @@
             The project aims to recommand the protaintial purchasing on Amazon online store. The recommandation based on Item-CF(Item-based collaborative filtering) algorithm.
         </p>
     </article>
-            <article>
+    <article>
         <header>
-            <h1>Amazon Recommendation System</h1>
-            <span><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
+            <h1>Research on Human Posture Recognition Algorithm and Application        
+        based on Microsoft KINECT </h1>
+            <span><address>Beijing Normal University,Zhuhai</address><time>2014</time></span>
         </header>
         <p>
-            The project aims to recommand the protaintial purchasing  based on Item-CF(Item-based collaborative filtering) algorithm.
+            The research aims to 
         </p>
     </article>
 </section>
