--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,9 +4,9 @@
         <header>
             <h1>M.Sc. in Computer Science </h1>
             <span>The Chinese University of Hong Kong</span>
-            <span><address>HONG KONG</address><time>2014 to 2015</time><gpa>GPA:3.325/4 Distinguished scholarship
-            </gpa></span>
-
+            <span><address>HONG KONG</address><time>2014 to 2015</time></span><br/>
+            <gpa>GPA:3.325/4 Distinguished scholarship
+            </gpa>
         </header>
         <p>
             <em>Major Course:Data Mining, Cloud Computing</em>
@@ -17,7 +17,8 @@
         <header>
             <h1>B.Sc. in Computer Science and Technology</h1>
             <span>Beijing Normal University,Zhuhai</span>
-            <span><address>Zhuhai,China</address><time>2010 to 2014</time></span><gpa>GPA: 89/100 Top-grade Professional Scholarship
+            <span><address>Zhuhai,China</address><time>2010 to 2014</time></span><br/>
+            <gpa>GPA: 89/100 Top-grade Professional Scholarship
             </gpa>
         </header>
         <p>
