--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -6,18 +6,18 @@
 </h1>
             <h1>Software Developer
 </h1>
-            <span><address>Shenzhen,China</address><time>Dec. 2016 to Mar. 2017 </time></span>
+            <span><address>Shenzhen,China Phoenix,USA</address><time>Dec. 2016 to Mar. 2017 </time></span>
         </header>
-        <p>Rancher Flat network project based on SDN (Open source)
-        </p>
-        <p>Container logging workflow based on ELK
-        </p>
-        <p>CI/CD workflow based on Jenkins,mocha and docker
-        </p>
-        <p>Webank private cloud
-        </p>
-        <p>Hainan Airline group public cloud
-        </p>
+        <li>Rancher Flat network project based on SDN (Open source)
+        </li>
+        <li>Container logging workflow based on ElasticSearch, Fluentd, Kibana
+        </li>
+        <li>CI/CD workflow based on Jenkins, mocha and docker
+        </li>
+        <li>Webank private cloud
+        </li>
+        <li>Hainan Airline group public cloud
+        </li>
 
     </article>
         <article>
@@ -28,12 +28,12 @@
 </h1>
             <span><address>Shenzhen,China</address><time>Jul.2015 to Dec. 2016 </time></span>
         </header>
-        <p>Responsible for developing provisioning Oracle database and Grid Infrastructure
-        </p>
-        <p>Responsible for developing database management system development
-        </p>
-        <p>Internal toolkit for optimizing the work efficiency 
-        </p>
+        <li>Responsible for developing provisioning Oracle database and Grid Infrastructure
+        </li>
+        <li>Responsible for developing database management system development
+        </li>
+        <li>Internal toolkit for optimizing the work efficiency 
+        </li>
     </article>
 
 </section>
