--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,14 +6,48 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>C/C++ & Objective-C</em>
+            &nbsp;&nbsp;<em>Java</em>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
+            &nbsp;&nbsp;<em>Golang</em>, <em>Python</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
         </p>
+    </article>
+
+    <article>
+        <header>
+            <h1>Big-Data Framework</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<em>web crawler</em>,<em>Hadoop</em>,<em>MapReduce</em>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> 
+        </p>
+    </article>
+
+    <article>
+        <header>
+            <h1>Cloud Platform</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<em>AWS</em>,<em>Microsoft Azure</em>,<em>Packet(Baremetal cloud service)</em>
+        </p>
+    </article>
+        <article>
+        <header>
+            <h1>English</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<em>Excellent communication skills IELTS:  Over band: 6.5</em>
+        </p>
+
     </article>
 </section>
