--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,11 +2,11 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Rancher Labs Inc. (An open source container company)
+            <h1>Rancher Labs Inc. (An open source container management  company)
 </h1>
             <h1>Software Developer
 </h1>
-            <span><address>Shenzhen,China Phoenix,USA</address><time>Dec. 2016 to Mar. 2017 </time></span>
+            <span><address>Shenzhen,China & Phoenix,USA</address><time>Dec. 2016 to Mar. 2017 </time></span>
         </header>
         <li>Rancher Flat network project based on SDN (Open source)
         </li>
