add new content

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -10,7 +10,7 @@
         </header>
         <li>Rancher Flat network project based on SDN (Open source)
         </li>
-        <li>Container logging workflow based on ElasticSearch, Fluentd, Kibana
+        <li>Container log collection and analysis workflow based on ElasticSearch, Fluentd, Kibana
         </li>
         <li>CI/CD workflow based on Jenkins, mocha and docker
         </li>
