--- a/_includes/opensource.html
+++ b/_includes/opensource.html
@@ -2,13 +2,13 @@
     <h1>Opensource Gadgets</h1>
     <article>
         <header>
-            <h1>Piczle 3D: A personalized 3D puzzle model</h1>
+            <h1>Piczle 3D: A personalized 3D model puzzle</h1>
             <span><address>BSA 168-Hour entrepreneur start-up campaign, Hong Kong</address><time>2015</time></span>
         </header>
         <p>
-        This project had been proposed when I join the BSA 168-Hour entrepreneur start-up campaign. The idea is making a reuseable 3D model which captured by mobile device camera. This project had won the best cloud computing awards and start-up seed fund.
+        This project had been proposed when I join the BSA 168-Hour entrepreneur start-up campaign. The idea is making a reuseable 3D model which captured by mobile device camera. The 3d reconstructed model transfered to pixelized 3d puzzle. This project had won the best cloud computing awards and start-up seed fund.
         </p>
-        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKdHVMdXJnelNJSE0"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i> Slides </a><a href="https://github.com/qianlifu12345/FlatNetworkSetup"><i class="fa fa-youtube-play" aria-hidden="true"></i></i> Demo</a>
+        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKdHVMdXJnelNJSE0" target="_blank" > <i class="fa fa-file-powerpoint-o" aria-hidden="true"></i> Slides </a><a href="https://www.youtube.com/watch?v=MoDiT1LXKN4&t=4s" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></i> Demo</a>
     </article>
     <article>
         <header>
@@ -19,7 +19,7 @@
         This project had been proposed when I join the National entrepreneur start-up campaign. The idea is providing a safe and reliable navigation application. The shining point is that projecting laser parallel lines indicate the direction for the bicycle riders. A demo had been made for proof of the concept. This application had won the Bronze Award for the national campaign.
 
         </p>
-        <a href="https://www.youtube.com/watch?v=MoDiT1LXKN4"><i class="fa fa-youtube-play" aria-hidden="true"></i></i> Demo</a>
+        <a href="https://www.youtube.com/watch?v=MoDiT1LXKN4" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></i> Demo</a>
     </article>
     <article>
         <header>
@@ -29,7 +29,7 @@
         <p>
         The golang ssh client can connect to the remote server via SSH protocal. This is useful execute a bunch of code on the remote server to initalize the server setup.
         </p>
-        <a href="https://github.com/qianlifu12345/remoteServer"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
+        <a href="https://github.com/qianlifu12345/remoteServer" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
     </article>
     <article>
         <header>
@@ -39,7 +39,7 @@
         <p>
             The domain validation service allows the user add customized domain for the load balancer. It provides ACME challange validation and DNS TXT record  validation. It can prevent the third- party attack and phishing attack for the load balancer.
         </p>
-        <a href="https://github.com/rancher/rancher-domain-validation-service"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
+        <a href="https://github.com/rancher/rancher-domain-validation-service" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
     </article>
    <article>
         <header>
@@ -49,6 +49,6 @@
         <p>
             The authentication filter will validate the user's request by checking the Cookie.
         </p>
-        <a href="https://github.com/qianlifu12345/rancher-auth-proxy"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
+        <a href="https://github.com/qianlifu12345/rancher-auth-proxy" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
     </article>
 </section>
