--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -9,7 +9,7 @@
         <p>
              Rancher Flat network project based on Container Network Interface, which is a software-defined network. The Flat network plugin implements the IP allocation for the containers and the container network connectivity. The containers , Virtual Machines and baremetal machines can access to each other and they are in the same subnet and network hierachy.
         </p>
-        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKa0hEYjJUOGNCamc"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Rancher Flat Network documentation</a><a href="https://github.com/qianlifu12345/FlatNetworkSetup"><i class="fa fa-github" aria-hidden="true"></i></i> Flat Network Demo Setup</a>
+        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKa0hEYjJUOGNCamc" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Rancher Flat Network documentation</a><a href="https://github.com/qianlifu12345/FlatNetworkSetup" target="_blank" ><i class="fa fa-github" aria-hidden="true"></i></i> Flat Network Demo Setup</a>
     </article>
     <article>
         <header>
@@ -22,9 +22,9 @@
         <p>
             Developing tools and language:Python,MongoDB, Naïve-Bayes, Topic model, web crawler, Django
         </p>
-        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKT3ZaVlQwZ0JpSzg"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Phrase I:Personal data crawling and statistic.doc </a>
-        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKUldBWERQUXphNDQ"><i class="fa fa-file-word-o" aria-hidden="true"></i> Phrase II: Research for Topic Model.pdf </a><br>
-        <a href="https://github.com/CUHKSocialNetworkProject/pda"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
+        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKT3ZaVlQwZ0JpSzg" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Phrase I:Personal data crawling and statistic.doc </a>
+        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKUldBWERQUXphNDQ" target="_blank"><i class="fa fa-file-word-o" aria-hidden="true"></i> Phrase II: Research for Topic Model.pdf </a><br>
+        <a href="https://github.com/CUHKSocialNetworkProject/pda" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></i> Code Repository</a>
     </article>
         <article>
         <header>
@@ -34,8 +34,8 @@
         <p>
             The project aims to recommand the protaintial purchasing on Amazon online store. The recommandation based on Item-CF(Item-based collaborative filtering) algorithm.
         </p>
-        <a href="https://youtu.be/0eUwOAgpjKU"><i class="fa fa-youtube-play" aria-hidden="true"></i> Demo </a>
-        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKempCeDJseDZnMnM"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i></i> Slides</a>
+        <a href="https://youtu.be/0eUwOAgpjKU" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Demo </a>
+        <a href="https://drive.google.com/open?id=0ByuVTzEdiigKempCeDJseDZnMnM" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i></i> Slides</a>
     </article>
     <article>
         <header>
@@ -46,7 +46,7 @@
         <p>
             Four posture recognition algorithms based on Microsoft Kinect sensor．Four algorithms were developed to define different postures including running, walking, turn left and right, hand up and virtual car wheel. Algorithms are based on Euclidean metric, angles and relative position. Two applications had been made in animation and security monitoring aspect relatively. The algorithms have been tested in applications which have high recognize rate and reliability. The algorithms are capable of consuming-level using.
         </p>
-        <a href="https://youtu.be/_p5YkBj6Je4"><i class="fa fa-youtube-play" aria-hidden="true"></i> Demo </a><a href="https://drive.google.com/open?id=0ByuVTzEdiigKclM4Q0o5MmhQR0U"><i class="fa fa-file-word-o
-        " aria-hidden="true"></i> Published Dissertation</a>
+        <a href="https://youtu.be/_p5YkBj6Je4" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Demo </a><a href="https://drive.google.com/open?id=0ByuVTzEdiigKclM4Q0o5MmhQR0U" target="_blank"><i class="fa fa-file-word-o
+        " aria-hidden="true"></i> Unpublished Dissertation</a>
     </article>
 </section>
