add new content

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,13 +4,13 @@
         <header>
             <h1>M.Sc. in Computer Science </h1>
             <span>The Chinese University of Hong Kong</span>
-            <span><address>HONG KONG</address><time>2014 to 2015</time></span><br/>
+            <span><address>Hong Kong</address><time>2014 to 2015</time></span><br/>
             <gpa>GPA:3.325/4 Distinguished scholarship
             </gpa>
         </header>
         <p>
             <em>Major Course:Data Mining, Cloud Computing</em>
-            <em>Researches: Personal Data Analytic and Implement</em>
+            <em>Researches: Personal Data Analysis and Implementation</em>
         </p>
     </article>
     <article>
