add new content

--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -9,6 +9,9 @@
         <p>
              Rancher Flat network project based on Container Network Interface, which is a software-defined network. The Flat network plugin implements the IP allocation for the containers and the container network connectivity. The containers , Virtual Machines and baremetal machines can access to each other and they are in the same subnet and network hierachy.
         </p>
+        <p>
+            Developing tools and language:Golang, Container Network Interface, Linux network namespace
+        </p>
         <a href="https://drive.google.com/open?id=0ByuVTzEdiigKa0hEYjJUOGNCamc" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Rancher Flat Network documentation</a><a href="https://github.com/qianlifu12345/FlatNetworkSetup" target="_blank" ><i class="fa fa-github" aria-hidden="true"></i></i> Flat Network Demo Setup</a>
     </article>
     <article>
@@ -34,6 +37,9 @@
         <p>
             The project aims to recommand the protaintial purchasing on Amazon online store. The recommandation based on Item-CF(Item-based collaborative filtering) algorithm.
         </p>
+        <p>
+            Developing tools and language:Java,Hadoop, Mahout
+        </p>
         <a href="https://youtu.be/0eUwOAgpjKU" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Demo </a>
         <a href="https://drive.google.com/open?id=0ByuVTzEdiigKempCeDJseDZnMnM" target="_blank"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i></i> Slides</a>
     </article>
@@ -45,6 +51,9 @@
         </header>
         <p>
             Four posture recognition algorithms based on Microsoft Kinect sensor．Four algorithms were developed to define different postures including running, walking, turn left and right, hand up and virtual car wheel. Algorithms are based on Euclidean metric, angles and relative position. Two applications had been made in animation and security monitoring aspect relatively. The algorithms have been tested in applications which have high recognize rate and reliability. The algorithms are capable of consuming-level using.
+        </p>
+        <p>
+            Developing tools and language:C#,Unity 3D
         </p>
         <a href="https://youtu.be/_p5YkBj6Je4" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Demo </a><a href="https://drive.google.com/open?id=0ByuVTzEdiigKclM4Q0o5MmhQR0U" target="_blank"><i class="fa fa-file-word-o
         " aria-hidden="true"></i> Unpublished Dissertation</a>
