--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -16,11 +16,11 @@
     </article>
     <article>
         <header>
-            <h1>Research on Personal Data Analytic and Implement </h1>
+            <h1>Research on Personal Data Analytics and Implement </h1>
             <span><professor>Supervised by Prof. John C.S. Lui</professor><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
         </header>
         <p>
-            The project aims to analysis the web blog and post in the social network. The project had implemented the word count, sentiment  analysis,living habit analysis,topic model based on LDA(Latent Dirichlet Allocation) algorithm. 
+            The project aims to analysis the web blog and post in the online social network. The project had implemented the word count, sentiment  analysis,living habit analysis,topic model based on LDA(Latent Dirichlet Allocation) algorithm. 
         </p>
         <p>
             Developing tools and language:Python,MongoDB, Naïve-Bayes, Topic model, web crawler, Django
