add new content

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,5 +1,5 @@
 <section class="thirteen columns">
-    <h1>Programming Skills</h1>
+    <h1>Programming & Communication Skills</h1>
     <article>
         <header>
             <h1>Software engineering & web development</h1>
