add new content

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,7 +2,7 @@
     <h1>Programming & Communication Skills</h1>
     <article>
         <header>
-            <h1>Software engineering & web development</h1>
+            <h1>Software engineering</h1>
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
@@ -10,6 +10,10 @@
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;<em>Golang</em>, <em>Python</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
+        </p>
+                <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Linux Network Namespace</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
