add new content

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -12,7 +12,7 @@
             &nbsp;&nbsp;<em>Golang</em>, <em>Python</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
         </p>
                 <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;<em>Linux Network Namespace</em>
         </p>
         <p>
