add in employee

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -28,9 +28,9 @@
 </h1>
             <span><address>Shenzhen,China</address><time>Jul.2015 to Dec. 2016 </time></span>
         </header>
-        <li>Responsible for developing provisioning Oracle database and Grid Infrastructure
+        <li>Automatic deployment and management Oracle database and Grid Infrastructure (version 12.1/12.2)
         </li>
-        <li>Responsible for developing database management system development
+        <li>development based on MVC design pattern
         </li>
         <li>Internal toolkit for optimizing the work efficiency 
         </li>
