add in employee

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -28,9 +28,9 @@
 </h1>
             <span><address>Shenzhen,China</address><time>Jul.2015 to Dec. 2016 </time></span>
         </header>
-        <li>developing automatic deployment and management for Oracle database and Grid Infrastructure (version 12.1/12.2)
+        <li>Developed a automatic deployment and management system for Oracle database and Grid Infrastructure (version 12.1/12.2)
         </li>
-        <li>development based ADF Framework (an MVC design pattern framework)
+        <li>The system is based ADF Framework (an MVC design pattern framework)
         </li>
         <li>Internal toolkit for optimizing the work efficiency 
         </li>
