--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,5 +1,17 @@
 <section class="thirteen columns">
     <h1>Employment</h1>
+        <article>
+        <header>
+            <h1>HUA YUXUN Tech Co. Ltd (卖座网)</h1>
+            <h1>Software Developer</h1>
+            <span><address>Shenzhen,China </address><time>June. 2017 to present </time></span>
+        </header>
+        <li>Big-data processing platform (Recommend system)
+        </li>
+        <li>Design CI/CD pipeline for optimizing software deployment and release workflow
+        </li>
+        <li>Setup automatic integration test system
+    </article>
     <article>
         <header>
             <h1>Rancher Labs Inc. (An open source container management  company)
