add new work experience

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,10 +1,21 @@
 <section class="thirteen columns">
     <h1>Employment</h1>
+    <article>
+        <header>
+            <h1>Shenzhen Finance Institute,CUHK(SZ)</h1>
+            <h1>Research Assistant</h1>
+            <span><address>Shenzhen,China </address><time>Sept. 2017 to present </time></span>
+        </header>
+        <li>Distrubute Information Collection System
+        </li>
+        <li>How Social Sentiment Influencing the Capital Market
+        </li>
+    </article>
         <article>
         <header>
             <h1>HUA YUXUN Tech Co. Ltd (卖座网)</h1>
             <h1>Software Developer</h1>
-            <span><address>Shenzhen,China </address><time>June. 2017 to present </time></span>
+            <span><address>Shenzhen,China </address><time>June. 2017 to Sept. 2017 </time></span>
         </header>
         <li>Big-data processing platform (Recommend system)
         </li>
