--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -2,6 +2,17 @@
     <h1>Professional Experience</h1>
     <article>
         <header>
+            <h1>Distrubute Information Collection System</h1>
+            <span><address>Shenzhen Finance Institute,CUHK(SZ)</address><time>2017</time></span>
+        </header>
+        <p>
+            Distrubute Information Collection System is a distributed web crawling system that collect user post and tranfer the data to different databases.
+        </p>
+        <li>
+            Developing framework: Scrapy Cluster</li>
+    </article>
+    <article>
+        <header>
             <h1>Rancher Flat network project</h1>
             <span><address>
             Rancher Labs Inc.,Phoenix,USA</address><time>2017</time></span>
