--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,10 +6,10 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>Java</em>
+            &nbsp;&nbsp;<em>Java</em>,<em>Python</em>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Golang</em>, <em>Python</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
+            &nbsp;&nbsp; <em>Golang</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
         </p>
                 <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
@@ -31,17 +31,29 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> 
+            &nbsp;&nbsp;<em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> ,<em>Kafka</em>
         </p>
     </article>
-
+    <article>
+        <header>
+            <h1>Testing & CICD</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;<em>Docker</em>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;<em>Jenkins</em>
+        </p>
+    </article>
     <article>
         <header>
             <h1>Cloud Platform</h1>
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>AWS</em>,<em>Microsoft Azure</em>,<em>Packet(Baremetal cloud service)</em>
+            &nbsp;&nbsp;<em>Kubernates</em>,<em>AWS</em>,<em>Microsoft Azure</em>,<em>Aliyun</em>,<em>Packet(Baremetal cloud service)</em>
         </p>
     </article>
         <article>
