some small modification

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -9,7 +9,7 @@
             &nbsp;&nbsp;<em>Java</em>,<em>Python</em>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;<em>Golang</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
+            &nbsp;&nbsp;<em>Golang</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
         </p>
                 <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
@@ -44,7 +44,7 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;<em>Jenkins</em>
+            &nbsp;&nbsp;&nbsp;&nbsp;<em>Jenkins</em>
         </p>
     </article>
     <article>
