some small modification

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,13 +2,13 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Shenzhen Finance Institute,CUHK(SZ)</h1>
+            <h1>Shenzhen Finance Institute,The Chinese University of Hong Kong(SZ)</h1>
             <h1>Research Assistant</h1>
             <span><address>Shenzhen,China </address><time>Sept. 2017 to present </time></span>
         </header>
         <li>Distrubute Information Collection System
         </li>
-        <li>How Social Sentiment Influencing the Capital Market
+        <li>How Social Sentiment Influence the Capital Market
         </li>
     </article>
         <article>
