--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -36,6 +36,19 @@
     </article>
     <article>
         <header>
+            <h1>Database</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;<em>Oracle</em>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Elastic Search</em>,<em>Redis</em>
+        </p>
+    </article>
+    <article>
+        <header>
             <h1>Testing & CICD</h1>
         </header>
         <p>
@@ -44,7 +57,7 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;&nbsp;<em>Jenkins</em>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Jenkins</em>
         </p>
     </article>
     <article>
