--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -6,9 +6,9 @@
             <h1>Research Assistant</h1>
             <span><address>Shenzhen,China </address><time>Sept. 2017 to present </time></span>
         </header>
-        <li>Distrubute Information Collection System
+        <li>Distribute Information Collection and Analysis Platform
         </li>
-        <li>How Social Sentiment Influence the Capital Market
+        <li>Research: How Social Sentiment Influence the Capital Market
         </li>
     </article>
         <article>
