--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -6,7 +6,7 @@
             <span><address>Shenzhen Finance Institute,CUHK(SZ)</address><time>2017</time></span>
         </header>
         <p>
-Distribute Information Collection and Analysis Platform is a distributed web crawling system that collects social network information and analyzes the public sentiment. I am responsible design and implement whole data pipeline including web crawling, data bus design, data warehouse design and software provisioning.
+        Distribute Information Collection and Analysis Platform is a distributed web crawling system that collects social network information and analyzes the public sentiment. I am responsible for designing and implementing whole data pipeline including web crawling, data bus design, data warehouse design and software provisioning.
         </p>
         <li>
             Frameworks: Scrapy Cluster ,Spark Streaming, Kafka, Redis, Zookeeper, Logstash, Elasticsearch
@@ -38,7 +38,7 @@ Distribute Information Collection and Analysis Platform is a distributed web cra
     <article>
         <header>
             <h1>Research on Personal Data Analytics and Implement </h1>
-            <span><professor>Supervised by Prof. John C.S. Lui @ </professor><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
+            <span><professor>Under supervised by Prof. John C.S. Lui @ </professor><address>The Chinese Univercity of Hong Kong,Hong Kong</address><time>2015</time></span>
         </header>
         <p>
             The project aims to analysis the web blog and post in the online social network. The project had implemented the word count, sentiment  analysis,living habit analysis,topic model based on LDA(Latent Dirichlet Allocation) algorithm. 
